--- a/src/ModSink.Core/ModSink.Core.csproj
+++ b/src/ModSink.Core/ModSink.Core.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="DynamicData" Version="6.0.1.2317-beta" />
     <PackageReference Include="Humanizer" Version="2.2.0" />
+    <PackageReference Include="Microsoft.DotNet.Analyzers.Compatibility" Version="0.1.2-alpha" />
     <PackageReference Include="reactiveui" Version="8.0.0-alpha0094" />
     <PackageReference Include="System.Interactive" Version="3.1.1" />
     <PackageReference Include="System.Reactive" Version="3.1.1" />
